tests/cases/errors/dpi_import_four_state/main.sv
module Top;
  import "DPI-C" function int f(input logic [7:0] x);
endmodule
